--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "toastr": "^2.1.4"
   }
 }
