--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo mocha --reporter spec tools/testSetup.js \"src/**/*.test.js\"",
     "start": "babel-node tools/srcServer.js"
   },
   "keywords": [],
