--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo mocha --reporter spec tools/testSetup.js \"src/**/*.test.js\"",
+    "test": "mocha --compilers js:babel-register --reporter spec --require tools/testSetup.js \"src/**/*.test.js\"",
     "start": "babel-node tools/srcServer.js"
   },
   "keywords": [],
@@ -19,13 +19,19 @@
     "babel-register": "^6.26.0",
     "cheerio": "^1.0.0-rc.2",
     "css-loader": "^0.28.11",
+    "enzyme": "^3.3.0",
     "eslint": "^4.19.1",
     "eslint-plugin-import": "^2.9.0",
     "eslint-plugin-react": "^7.7.0",
     "eslint-watch": "^3.1.3",
+    "expect": "^22.4.3",
     "express": "^4.16.3",
     "file-loader": "^0.11.2",
+    "jsdom": "^11.7.0",
+    "mocha": "^5.0.5",
     "prop-types": "^15.6.1",
+    "react-addons-test-utils": "^15.6.2",
+    "react-test-renderer": "^16.3.1",
     "style-loader": "^0.20.3",
     "url-loader": "^1.0.1",
     "webpack": "^4.2.0",
