--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --compilers js:babel-register --reporter spec --require tools/testSetup.js \"src/Components/**/*.*.test.js\"",
+    "test": "mocha --compilers js:babel-register --reporter spec --require tools/testSetup.js \"src/Components/**/*.*.test.js\" \"src/Components/**/*.test.js\"",
     "start": "babel-node tools/srcServer.js"
   },
   "keywords": [],
