--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "file-loader": "^0.11.2",
     "jsdom": "^11.7.0",
     "mocha": "^5.0.5",
+    "nock": "^9.2.3",
     "prop-types": "^15.6.1",
     "react-addons-test-utils": "^15.6.2",
     "react-test-renderer": "^16.3.1",
+    "redux-mock-store": "^1.5.1",
     "style-loader": "^0.20.3",
     "url-loader": "^1.0.1",
     "webpack": "^4.2.0",
