--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha --compilers js:babel-register --reporter spec --require tools/testSetup.js \"src/Components/**/*.*.test.js\" \"src/Components/**/*.test.js\"",
-    "start": "babel-node tools/srcServer.js"
+    "start": "babel-node tools/srcServer.js",
+    "clean-dist": "npm run remove-dist && mkdir dist",
+    "remove-dist": "node_modules/.bin/rimraf ./dist",
+    "build:html": "babel-node tools/build.js",
+    "prebuild": "npm-run-all clean-dist test build:html",
+    "build": "babel-node tools/build.js",
+    "postbuild": "babel-node tools/distServer.js"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +24,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
     "cheerio": "^1.0.0-rc.2",
+    "colors": "^1.2.1",
     "css-loader": "^0.28.11",
     "enzyme": "^3.3.0",
     "eslint": "^4.19.1",
@@ -26,6 +33,7 @@
     "eslint-watch": "^3.1.3",
     "expect": "^22.4.3",
     "express": "^4.16.3",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^0.11.2",
     "jsdom": "^11.7.0",
     "mocha": "^5.0.5",
@@ -34,6 +42,7 @@
     "react-addons-test-utils": "^15.6.2",
     "react-test-renderer": "^16.3.1",
     "redux-mock-store": "^1.5.1",
+    "rimraf": "^2.6.2",
     "style-loader": "^0.20.3",
     "url-loader": "^1.0.1",
     "webpack": "^4.2.0",
