--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "start": "babel-node tools/srcServer.js",
     "clean-dist": "npm run remove-dist && mkdir dist",
     "remove-dist": "node_modules/.bin/rimraf ./dist",
-    "build:html": "babel-node tools/build.js",
+    "build:html": "babel-node tools/htmlBuild.js",
     "prebuild": "npm-run-all clean-dist test build:html",
-    "build": "babel-node tools/build.js",
+    "build": "set NODE_ENV=production&& babel-node tools/build.js",
     "postbuild": "babel-node tools/distServer.js"
   },
   "keywords": [],
@@ -25,7 +25,9 @@
     "babel-register": "^6.26.0",
     "cheerio": "^1.0.0-rc.2",
     "colors": "^1.2.1",
+    "compression": "^1.7.2",
     "css-loader": "^0.28.11",
+    "dotenv": "^5.0.1",
     "enzyme": "^3.3.0",
     "eslint": "^4.19.1",
     "eslint-plugin-import": "^2.9.0",
@@ -33,7 +35,7 @@
     "eslint-watch": "^3.1.3",
     "expect": "^22.4.3",
     "express": "^4.16.3",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^0.11.2",
     "jsdom": "^11.7.0",
     "mocha": "^5.0.5",
@@ -44,6 +46,7 @@
     "redux-mock-store": "^1.5.1",
     "rimraf": "^2.6.2",
     "style-loader": "^0.20.3",
+    "uglifyjs-webpack-plugin": "^1.2.4",
     "url-loader": "^1.0.1",
     "webpack": "^4.2.0",
     "webpack-dev-middleware": "^3.0.1",
